--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "author": "Bochkareva",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
-    "core-js": "3",
+    "core-js": "^3.25.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -32,5 +32,8 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   }
 }
