--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,15 +5,12 @@ branches:
   - master # ветка git
 cache: node_modules
 install:
-- npm install
+- yarn
 build: off
 # кеширование
 # команда установки зависимостей
 build_script:
-- npm run build # команда сборки
-test_script:
-  - npm run lint && npm run test  # скрипт тестирования
-  
+- yarn build # команда сборки
 deploy_script: # скрипт развёртывания
 - git config --global credential.helper store
 - git config --global user.name AppVeyor
