--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "collapsehomework",
+  "name": "collapse",
   "version": "1.0.0",
-  "description": "anination",
-  "main": "webpack.common.js",
+  "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "lint": "eslint ."
+    "lint": "eslint ./src",
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "ci": "start-test :8888 test",
+    "doc": "jsdoc -c jsdoc.conf.json",
+    "preshow:coverage": "npm run coverage",
+    "show:coverage": "live-server coverage/lcov-report",
+    "preshow:doc": "npm run doc",
+    "show:doc": "live-server doc",
+    "preshow:dist": "npm run build",
+    "show:dist": "live-server dist"
   },
-  "author": "Bochkareva",
-  "license": "ISC",
+  "repository": "https://github.com/bochkarevatat/collapseHomeWork.git",
+  "author": "bochkarevatat <tanitabt@rambler.ru>",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.18.13",
-    "@babel/preset-env": "^7.18.10",
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
-    "core-js": "^3.25.0",
+    "core-js": "3",
     "css-loader": "^6.7.1",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -27,13 +37,11 @@
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^2.6.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "puppeteer": "^15.4.0",
     "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1",
-    "webpack-merge": "^5.7.3"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
+    "webpack-merge": "^5.8.0"
   }
 }
